Fix snippet bleeds

--- a/src/_assets/scss/_code.scss
+++ b/src/_assets/scss/_code.scss
@@ -3,6 +3,10 @@
 @media screen and (prefers-color-scheme: dark) {
     html:not(.light) {
         @import "node_modules/highlight.js/scss/railscasts";
+
+        .hljs {
+            padding: 1rem;
+        }
     }
 }
 
@@ -12,9 +16,9 @@
 
     overflow-x: auto;
     scrollbar-width: thin;
+
     margin-left: -1rem;
     margin-right: -1rem;
-    padding: 1rem;
     background-color: var(--bg-code);
     border: 1px solid rgba(black, 0.1);
     z-index: 0;
